--- a/archives/zhihu-search/2024-02-22.md
+++ b/archives/zhihu-search/2024-02-22.md
@@ -1,10 +1,10 @@
 # 2024-02-22
 
-共 10 条
+共 11 条
 
 <!-- BEGIN ZHIHUSEARCH -->
-<!-- 最后更新时间 Thu Feb 22 2024 13:00:40 GMT+0800 (China Standard Time) -->
-1. [今日A股市场](https://www.zhihu.com/search?q=今日A股市场)
+<!-- 最后更新时间 Thu Feb 22 2024 14:00:33 GMT+0800 (China Standard Time) -->
+1. [上证指数冲击3000点](https://www.zhihu.com/search?q=上证指数冲击3000点)
 1. [软件工程](https://www.zhihu.com/search?q=软件工程)
 1. [三大指数低开](https://www.zhihu.com/search?q=三大指数低开)
 1. [新疆地震](https://www.zhihu.com/search?q=新疆地震)
@@ -14,4 +14,5 @@
 1. [项目管理](https://www.zhihu.com/search?q=项目管理)
 1. [信息系统项目管理师](https://www.zhihu.com/search?q=信息系统项目管理师)
 1. [网络工程师](https://www.zhihu.com/search?q=网络工程师)
+1. [今日A股市场](https://www.zhihu.com/search?q=今日A股市场)
 <!-- END ZHIHUSEARCH -->
